src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement_list
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> <empty>
Rule 4     statement -> IF LPAREN expression RPAREN block else_clause
Rule 5     else_clause -> ELSE block
Rule 6     else_clause -> <empty>
Rule 7     statement -> WHILE LPAREN expression RPAREN block
Rule 8     statement -> block
Rule 9     block -> LBRACE statement_list RBRACE
Rule 10    statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 11    statement -> NAME ASSIGN expression SEMICOLON
Rule 12    statement -> NAME assign_index ASSIGN expression SEMICOLON
Rule 13    assign_index -> LBRACKET expression RBRACKET assign_index_list
Rule 14    assign_index_list -> LBRACKET expression RBRACKET assign_index_list
Rule 15    assign_index_list -> <empty>
Rule 16    expression -> LPAREN expression RPAREN
Rule 17    expression -> value
Rule 18    expression -> MINUS expression
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression TIMES expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> expression LT expression
Rule 24    expression -> expression LTE expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression GTE expression
Rule 27    expression -> expression EQ expression
Rule 28    expression -> expression NOTEQ expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression IN expression
Rule 32    expression -> expression DIV expression
Rule 33    expression -> expression MOD expression
Rule 34    expression -> expression CONS expression
Rule 35    expression -> expression EXP expression
Rule 36    expression -> NOT expression
Rule 37    value -> REAL
Rule 38    value -> INTEGER
Rule 39    value -> STRING
Rule 40    value -> bool
Rule 41    expression -> NAME
Rule 42    expression -> list_construction
Rule 43    expression -> index_expression
Rule 44    expression -> tuple_construction
Rule 45    expression -> hash_expression
Rule 46    hash_expression -> HASH expression expression
Rule 47    tuple_construction -> LPAREN expression COMMA tuple_tail
Rule 48    tuple_construction -> LPAREN RPAREN
Rule 49    tuple_tail -> expression COMMA tuple_tail
Rule 50    tuple_tail -> expression RPAREN
Rule 51    tuple_tail -> RPAREN
Rule 52    index_expression -> expression LBRACKET expression RBRACKET
Rule 53    bool -> TRUE
Rule 54    bool -> FALSE
Rule 55    list_construction -> LBRACKET expression list_tail
Rule 56    list_construction -> LBRACKET RBRACKET
Rule 57    list_tail -> COMMA expression list_tail
Rule 58    list_tail -> RBRACKET

Terminals, with rules where they appear

AND                  : 29
ASSIGN               : 11 12
COMMA                : 47 49 57
CONS                 : 34
DIV                  : 32
DIVIDE               : 22
ELSE                 : 5
EQ                   : 27
EXP                  : 35
FALSE                : 54
GT                   : 25
GTE                  : 26
HASH                 : 46
IF                   : 4
IN                   : 31
INTEGER              : 38
LBRACE               : 9
LBRACKET             : 13 14 52 55 56
LPAREN               : 4 7 10 16 47 48
LT                   : 23
LTE                  : 24
MINUS                : 18 20
MOD                  : 33
NAME                 : 11 12 41
NOT                  : 36
NOTEQ                : 28
OR                   : 30
PLUS                 : 19
PRINT                : 10
RBRACE               : 9
RBRACKET             : 13 14 52 56 58
REAL                 : 37
RPAREN               : 4 7 10 16 48 50 51
SEMICOLON            : 10 11 12
STRING               : 39
TIMES                : 21
TRUE                 : 53
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

assign_index         : 12
assign_index_list    : 13 14
block                : 4 5 7 8
bool                 : 40
else_clause          : 4
expression           : 4 7 10 11 12 13 14 16 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 46 46 47 49 50 52 52 55 57
hash_expression      : 45
index_expression     : 43
list_construction    : 42
list_tail            : 55 57
start                : 0
statement            : 2
statement_list       : 1 2 9
tuple_construction   : 44
tuple_tail           : 47 49
value                : 17

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> .
    (4) statement -> . IF LPAREN expression RPAREN block else_clause
    (7) statement -> . WHILE LPAREN expression RPAREN block
    (8) statement -> . block
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . NAME ASSIGN expression SEMICOLON
    (12) statement -> . NAME assign_index ASSIGN expression SEMICOLON
    (9) block -> . LBRACE statement_list RBRACE

    $end            reduce using rule 3 (statement_list -> .)
    IF              shift and go to state 4
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    LBRACE          shift and go to state 9

    start                          shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    block                          shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> statement_list .

    $end            reduce using rule 1 (start -> statement_list .)


state 3

    (2) statement_list -> statement . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> .
    (4) statement -> . IF LPAREN expression RPAREN block else_clause
    (7) statement -> . WHILE LPAREN expression RPAREN block
    (8) statement -> . block
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . NAME ASSIGN expression SEMICOLON
    (12) statement -> . NAME assign_index ASSIGN expression SEMICOLON
    (9) block -> . LBRACE statement_list RBRACE

    $end            reduce using rule 3 (statement_list -> .)
    RBRACE          reduce using rule 3 (statement_list -> .)
    IF              shift and go to state 4
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    LBRACE          shift and go to state 9

    statement                      shift and go to state 3
    statement_list                 shift and go to state 10
    block                          shift and go to state 5

state 4

    (4) statement -> IF . LPAREN expression RPAREN block else_clause

    LPAREN          shift and go to state 11


state 5

    (8) statement -> block .

    IF              reduce using rule 8 (statement -> block .)
    WHILE           reduce using rule 8 (statement -> block .)
    PRINT           reduce using rule 8 (statement -> block .)
    NAME            reduce using rule 8 (statement -> block .)
    LBRACE          reduce using rule 8 (statement -> block .)
    $end            reduce using rule 8 (statement -> block .)
    RBRACE          reduce using rule 8 (statement -> block .)


state 6

    (7) statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 12


state 7

    (10) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 13


state 8

    (11) statement -> NAME . ASSIGN expression SEMICOLON
    (12) statement -> NAME . assign_index ASSIGN expression SEMICOLON
    (13) assign_index -> . LBRACKET expression RBRACKET assign_index_list

    ASSIGN          shift and go to state 14
    LBRACKET        shift and go to state 16

    assign_index                   shift and go to state 15

state 9

    (9) block -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement statement_list
    (3) statement_list -> .
    (4) statement -> . IF LPAREN expression RPAREN block else_clause
    (7) statement -> . WHILE LPAREN expression RPAREN block
    (8) statement -> . block
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . NAME ASSIGN expression SEMICOLON
    (12) statement -> . NAME assign_index ASSIGN expression SEMICOLON
    (9) block -> . LBRACE statement_list RBRACE

    RBRACE          reduce using rule 3 (statement_list -> .)
    IF              shift and go to state 4
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8
    LBRACE          shift and go to state 9

    statement_list                 shift and go to state 17
    statement                      shift and go to state 3
    block                          shift and go to state 5

state 10

    (2) statement_list -> statement statement_list .

    $end            reduce using rule 2 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 2 (statement_list -> statement statement_list .)


state 11

    (4) statement -> IF LPAREN . expression RPAREN block else_clause
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 19
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 12

    (7) statement -> WHILE LPAREN . expression RPAREN block
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 36
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 13

    (10) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 37
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 14

    (11) statement -> NAME ASSIGN . expression SEMICOLON
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 38
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 15

    (12) statement -> NAME assign_index . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 39


state 16

    (13) assign_index -> LBRACKET . expression RBRACKET assign_index_list
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 40
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 17

    (9) block -> LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 41


state 18

    (16) expression -> LPAREN . expression RPAREN
    (47) tuple_construction -> LPAREN . expression COMMA tuple_tail
    (48) tuple_construction -> LPAREN . RPAREN
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . value
    (18) expression -> . MINUS expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LTE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GTE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NOTEQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression IN expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression MOD expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression EXP expression
    (36) expression -> . NOT expression
    (41) expression -> . NAME
    (42) expression -> . list_construction
    (43) expression -> . index_expression
    (44) expression -> . tuple_construction
    (45) expression -> . hash_expression
    (37) value -> . REAL
    (38) value -> . INTEGER
    (39) value -> . STRING
    (40) value -> . bool
    (55) list_construction -> . LBRACKET expression list_tail
    (56) list_construction -> . LBRACKET RBRACKET
    (52) index_expression -> . expression LBRACKET expression RBRACKET
    (47) tuple_construction -> . LPAREN expression COMMA tuple_tail
    (48) tuple_construction -> . LPAREN RPAREN
    (46) hash_expression -> . HASH expression expression
    (53) bool -> . TRUE
    (54) bool -> . FALSE

    RPAREN          shift and go to state 43
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 21
    NOT             shift and go to state 22
    NAME            shift and go to state 23
    REAL            shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    LBRACKET        shift and go to state 32
    HASH            shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    expression                     shift and go to state 42
    value                          shift and go to state 20
    list_construction              shift and go to state 24
    index_expression               shift and go to state 25
    tuple_construction             shift and go to state 26
    hash_expression                shift and go to state 27
    bool                           shift and go to state 31

state 19

    (4) statement -> IF LPAREN expression . RPAREN block else_clause
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . LTE expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . GTE expression
    (27) expression -> expression . EQ expression
    (28) expression -> expression . NOTEQ expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . IN expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . MOD expression
    (34) expression -> expression . CONS expression
    (35) expression -> expression . EXP expression
    (52) index_expression -> expression . LBRACKET expression RBRACKET

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    LT              shift and go to state 49
    LTE             shift and go to state 50
    GT              shift and go to state 51
    GTE             shift and go to state 52
    EQ              shift and go to state 53
    NOTEQ           shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56
    IN              shift and go to state 57
    DIV             shift and go to state 58
    MOD             shift and go to state 59
    CONS            shift and go to state 60
    EXP             shift and go to state 61
    LBRACKET        shift and go to state 62


state 20

    (17) expression -> value .

    RPAREN          reduce using rule 17 (expression -> value .)
    PLUS            reduce using rule 17 (expression -> value .)
    MINUS           reduce using rule 17 (expression -> value .)
    TIMES           reduce using rule 17 (expression -> value .)
    DIVIDE          reduce using rule 17 (expression -> value .)
    LT              reduce using rule 17 (expression -> value .)
    LTE             reduce using rule 17 (expression -> value .)
    GT              reduce using rule 17 (expression -> value .)
    GTE             reduce using rule 17 (expression -> value .)
    EQ              reduce using rule 17 (expression -> value .)
    NOTEQ           reduce using rule 17 (expression -> value .)
    AND             reduce using rule 17 (expression -> value .)
    OR              reduce using rule 17 (expression -> value .)
    IN              reduce using rule 17 (expression -> value .)
    DIV             reduce using rule 17 (expression -> value .)
    MOD             reduce using rule 17 (expression -> value .)
    CONS            reduce using rule 17 (expression -> value .)
    EXP             reduce using rule 17 (expression -> value .)
    LBRACKET        reduce using rule 17 (expression -> value .)
    SEMICOLON       reduce using rule 17 (expression -> value .)
    RBRACKET        reduce using rule 17 (expression -> value .)
    COMMA           reduce using rule 17 (expression -> value .)
    LPAREN          reduce using rule 17 (expression -> value .)
    NOT             reduce using rule 17 (expression -> value .)
    NAME            reduce using rule 17 (expression -> value .)
    REAL            reduce using rule 17 (expression -> value .)
    INTEGER         reduce using rule 17 (expression -> value .)
    STRING          reduce using rule 17 (expression -> value .)
    HASH            reduce using rule 17 (expression -> value .)
    TRUE            reduce using rule 17 (expression -> value .)
    FALSE           reduce using rule 17 (expression -> value .)


state 21
